# uwtools

./: .bumpversion.cfg  .coverage  .coveragerc  .editorconfig  .gitignore  .pylintrc  .readthedocs.yaml  Bukowski_Example_NB.ipynb  Makefile  README.md  coverage.sh  d_673929fde86c24bc___init___py.html  d_673929fde86c24bc_memory_py.html  d_8f989c85c5cd833d___init___py.html  d_8f989c85c5cd833d_loaders_py.html  d_8f989c85c5cd833d_logger_py.html  d_8f989c85c5cd833d_scheduler_py.html  environment.yaml  format  getting_started.rst  helloWorld.py  hello_world.py  index.html  index.rst  pyproject.toml  randomProduct..py  requirements.txt  setup.cfg  setup.py  status.json  test.sh  test_ecflow.yaml  tox.ini  working_with_config.rst
.cicd/: Jenkinsfile
.cicd/jobs/: lint_and_test.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  hotfix_template.md
.github/jobs/: build_documentation.sh
.github/scripts/: build-documentation  build-package  common.sh  format-check  format-check.sh  install-conda  install-conda.sh  link-check.sh  make-docs.sh  make-package  make-package.sh  make-test  publish  publish.sh  tag-check  tag-check.sh  (+6 more)
binder/: environment.yaml  environment.yml
coverage/: d_673929fde86c24bc___init___py.html  d_673929fde86c24bc_memory_py.html  d_8f989c85c5cd833d___init___py.html  d_8f989c85c5cd833d_loaders_py.html  d_8f989c85c5cd833d_logger_py.html  d_8f989c85c5cd833d_scheduler_py.html  index.html
css/: styles.css
docs/: Makefile  README.md  conf.py  d_8f989c85c5cd833d___init___py.html  d_8f989c85c5cd833d_loaders_py.html  d_8f989c85c5cd833d_logger_py.html  d_8f989c85c5cd833d_scheduler_py.html  deps  environment.yml  index.html  index.rst  install-deps  status.json
docs_old/: conf.py  environment.yml  index.rst
htmlcov/: d_8f989c85c5cd833d___init___py.html  d_8f989c85c5cd833d_loaders_py.html  d_8f989c85c5cd833d_logger_py.html  d_8f989c85c5cd833d_scheduler_py.html  index.html
notebooks/: Makefile  config-exp-cookbook.ipynb  config.ipynb  example.ipynb  exp-config-cb.ipynb  fs.ipynb  install-deps  pyproject.toml  rocoto.ipynb  template.ipynb
recipe/: README.md  build.sh  channels  conda_build_config.yaml  meta.json  meta.yaml  run_test.sh
scheduler_tool/: generic_sheduler.py
schema/: workflow.jsonschema
scripts/: atparse_to_jinja2.py  experiment_manager.py  run_forecast.py  runner.py  set_config.py  templater.py  validate_config.py
src/: MANIFEST.in  pyproject.toml  setup.py
tests/: namelist_testdriver.py  test_atparse_to_jinja2.py  test_config.py  test_dummy.py  test_experiment.py  test_jinja2config.py  test_loaders.py  test_logger.py  test_scheduler.py  test_set_config.py  test_set_namelist.py  test_set_namelist_ingest.py  test_template.py  test_templater.py  test_validate_tool.py  test_validators.py  test_yaml.py
uwtools/: config.py  exceptions.py  templater.py
wip/: common.h  config.yaml  ecflow.html  ecflow.ipynb  start
(+1442 files in other folders)
