[metadata]
name = uwtools
version = 0.0.1
description = Unified Workflow tools for use with applications with UFS and beyond
long_description = file: README.md
long_description_content_type = text/markdown
author = "NOAA, EPIC"
#author_email = first.last@domain.tld
keywords = NOAA, EPIC, UFS
home_page = https://github.com/ufs-community/workflow-tools
license = GNU Lesser General Public License
classifiers =
    Development Status :: 1 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Typing :: Typed
project_urls =
    Bug Tracker = https://github.com/ufs-community/workflow-tools/issues
    CI = https://github.com/ufs-community/workflow-tools/actions

[options]
zip_safe = False
include_package_data = True
package_dir =
  =src
packages = find_namespace:
python_requires = >= 3.6
setup_requires =
  setuptools
install_requires =
  numpy>==1.21.6
  PyYAML>=6.0

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
dev = pytest>=7; pytest-cov>=3; tox>=3.25; black>=22


[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true
