[metadata]
name = uwtools
version = 0.1.0
description = Unified Workflow tools for use with applications with UFS and beyond
long_description = file: README.md
long_description_content_type = text/markdown
author = "NOAA, EPIC"
#author_email = first.last@domain.tld
keywords = NOAA, EPIC, UFS
home_page = https://github.com/ufs-community/workflow-tools
license = GNU Lesser General Public License
classifiers =
    Development Status :: 1 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Typing :: Typed
project_urls =
    Bug Tracker = https://github.com/ufs-community/workflow-tools/issues
    CI = https://github.com/ufs-community/workflow-tools/actions
